improved velocity cos sim

--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_client_dropout.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_client_dropout.ipynb
@@ -114,35 +114,29 @@
     "class Net(nn.Module):\n",
     "    def __init__(self) -> None:\n",
     "        super(Net, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
-    "        self.pool1 = nn.MaxPool2d(2, 2)\n",
-    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1)\n",
-    "        self.conv4 = nn.Conv2d(128, 128, kernel_size=3, stride=1, padding=1)\n",
-    "        self.pool2 = nn.MaxPool2d(2, 2)\n",
-    "        self.conv5 = nn.Conv2d(128, 256, kernel_size=3, stride=1, padding=1)\n",
-    "        self.conv6 = nn.Conv2d(256, 256, kernel_size=3, stride=1, padding=1)\n",
-    "        self.pool3 = nn.MaxPool2d(2, 2)\n",
-    "        self.fc1 = nn.Linear(256*4*4, 1024)\n",
-    "        self.fc2 = nn.Linear(1024, 512)\n",
-    "        self.fc3 = nn.Linear(512, 10)\n",
-    "        \n",
+    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        self.fc1 = nn.Linear(16 * 5 * 5, 180)\n",
+    "        self.fc2 = nn.Linear(180, 160)\n",
+    "        self.fc3 = nn.Linear(160, 140)\n",
+    "        self.fc4 = nn.Linear(140, 120)\n",
+    "        self.fc5 = nn.Linear(120, 84)\n",
+    "        # self.fc6 = nn.Linear(100, 84)\n",
+    "        self.fc7 = nn.Linear(84, 10)\n",
+    "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = self.pool1(x)\n",
-    "        x = F.relu(self.conv3(x))\n",
-    "        x = F.relu(self.conv4(x))\n",
-    "        x = self.pool2(x)\n",
-    "        x = F.relu(self.conv5(x))\n",
-    "        x = F.relu(self.conv6(x))\n",
-    "        x = self.pool3(x)\n",
-    "        x = x.view(-1, 256*4*4)\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 16 * 5 * 5)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
+    "        x = F.relu(self.fc3(x))\n",
+    "        x = F.relu(self.fc4(x))\n",
+    "        x = F.relu(self.fc5(x))\n",
+    "        # x = F.relu(self.fc6(x))\n",
+    "        x = self.fc7(x)\n",
     "        return x\n",
-    "\n",
     "def get_parameters(net) -> List[np.ndarray]:\n",
     "    return [val.cpu().numpy() for _, val in net.state_dict().items()]\n",
     "\n",
@@ -1158,7 +1152,8 @@
     "    ) -> Tuple[Optional[Parameters], Dict[str, Scalar]]:\n",
     "        global global_all_optimizer_states\n",
     "        \"\"\"Aggregate fit results using weighted average.\"\"\"\n",
-    "        \n",
+    "\n",
+    "        trained_layer = results[0][1].metrics[\"trained_layer\"] \n",
     "        total_size = 0\n",
     "        for client, fit_res in results:\n",
     "            total_size += get_parameters_size(fit_res.parameters)\n",
@@ -1184,9 +1179,14 @@
     "            prev_global_optimizer_state = deserialize_optimizer_state(self.global_optim_state)\n",
     "        cos_similarities = self._cos_similarity_from_optimizer_states(optimizer_states, prev_global_optimizer_state)\n",
     "\n",
+    "        # Get cosine similarities\n",
+    "        equal_weights = [1] * len(optimizer_states)\n",
+    "        avg_optim_state = self._aggregate_optimizer_states_weighted(optimizer_states, equal_weights)\n",
+    "        cos_similarities = self._cos_similarity_from_optimizer_states(optimizer_states, avg_optim_state, trained_layer)\n",
+    "        print(f\"Cosine similarities used for aggregation are {cos_similarities}\")\n",
+    "\n",
     "        # Aggregate nn params using weighting from momentum\n",
     "        aggregated_weights = self._aggregate_params_weighted(weights_results, cos_similarities)\n",
-    "        trained_layer = results[0][1].metrics[\"trained_layer\"] \n",
     "\n",
     "        if trained_layer == -1:\n",
     "            self.latest_parameters = ndarrays_to_parameters(aggregated_weights)\n",
@@ -1273,11 +1273,15 @@
     "        ]\n",
     "        return weights_prime\n",
     "\n",
-    "    def _cos_similarity_from_optimizer_states(self, optimizer_states, prev_global_optimizer_state):\n",
+    "    def _cos_similarity_from_optimizer_states(self, optimizer_states, prev_global_optimizer_state, trained_layer=-1):\n",
     "        # Returns: cosine similarity from each optimizer state to the prev global state\n",
     "        cos = torch.nn.CosineSimilarity(dim=-1)\n",
     "        similarities = []\n",
-    "        layers = range(len(optimizer_states[0]['state']))\n",
+    "\n",
+    "        if trained_layer == -1:\n",
+    "            layers = range(len(optimizer_states[0]['state']))\n",
+    "        else:\n",
+    "            layers = [trained_layer * 2, trained_layer * 2 +1]\n",
     "\n",
     "        # get global opt params as vector\n",
     "        fst_momentum_glob = [prev_global_optimizer_state['state'][l]['exp_avg'].view(-1) for l in layers]\n",
