--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Training on mps\n",
-      "Flower 1.15.2 / PyTorch 2.6.0\n"
+      "Flower 1.15.1 / PyTorch 2.6.0\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,33 +115,28 @@
     "class Net(nn.Module):\n",
     "    def __init__(self) -> None:\n",
     "        super(Net, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
-    "        self.pool1 = nn.MaxPool2d(2, 2)\n",
-    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1)\n",
-    "        self.conv4 = nn.Conv2d(128, 128, kernel_size=3, stride=1, padding=1)\n",
-    "        self.pool2 = nn.MaxPool2d(2, 2)\n",
-    "        self.conv5 = nn.Conv2d(128, 256, kernel_size=3, stride=1, padding=1)\n",
-    "        self.conv6 = nn.Conv2d(256, 256, kernel_size=3, stride=1, padding=1)\n",
-    "        self.pool3 = nn.MaxPool2d(2, 2)\n",
-    "        self.fc1 = nn.Linear(256*4*4, 1024)\n",
-    "        self.fc2 = nn.Linear(1024, 512)\n",
-    "        self.fc3 = nn.Linear(512, 10)\n",
-    "        \n",
+    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        self.fc1 = nn.Linear(16 * 5 * 5, 180)\n",
+    "        self.fc2 = nn.Linear(180, 160)\n",
+    "        self.fc3 = nn.Linear(160, 140)\n",
+    "        self.fc4 = nn.Linear(140, 120)\n",
+    "        self.fc5 = nn.Linear(120, 84)\n",
+    "        # self.fc6 = nn.Linear(100, 84)\n",
+    "        self.fc7 = nn.Linear(84, 10)\n",
+    "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = self.pool1(x)\n",
-    "        x = F.relu(self.conv3(x))\n",
-    "        x = F.relu(self.conv4(x))\n",
-    "        x = self.pool2(x)\n",
-    "        x = F.relu(self.conv5(x))\n",
-    "        x = F.relu(self.conv6(x))\n",
-    "        x = self.pool3(x)\n",
-    "        x = x.view(-1, 256*4*4)\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 16 * 5 * 5)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
+    "        x = F.relu(self.fc3(x))\n",
+    "        x = F.relu(self.fc4(x))\n",
+    "        x = F.relu(self.fc5(x))\n",
+    "        # x = F.relu(self.fc6(x))\n",
+    "        x = self.fc7(x)\n",
     "        return x\n",
     "\n",
     "def get_parameters(net) -> List[np.ndarray]:\n",
@@ -272,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rounds: 23\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "NETWORK_LEN = len(Net().state_dict().keys()) // 2\n",
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,6 +1128,7 @@
     "        \"\"\"Aggregate fit results using weighted average.\"\"\"\n",
     "        \n",
     "        total_size = 0\n",
+    "        trained_layer = results[0][1].metrics[\"trained_layer\"] \n",
     "        for client, fit_res in results:\n",
     "            total_size += get_parameters_size(fit_res.parameters)\n",
     "            total_size += fit_res.metrics[\"recieved_parameter_size\"]\n",
@@ -1141,17 +1145,14 @@
     "        optimizer_states = [deserialize_optimizer_state(state) for state in optimizer_states_serialized if state is not None]\n",
     "\n",
     "        # Get cosine similarities\n",
-    "        if server_round == 1:\n",
-    "            # First round doesn't have a previous state. Use average momentum instead\n",
-    "            equal_weights = [1] * len(optimizer_states)\n",
-    "            prev_global_optimizer_state = self._aggregate_optimizer_states_weighted(optimizer_states, equal_weights)\n",
-    "        else:\n",
-    "            prev_global_optimizer_state = deserialize_optimizer_state(self.global_optim_state)\n",
-    "        cos_similarities = self._cos_similarity_from_optimizer_states(optimizer_states, prev_global_optimizer_state)\n",
+    "        equal_weights = [1] * len(optimizer_states)\n",
+    "        avg_optim_state = self._aggregate_optimizer_states_weighted(optimizer_states, equal_weights)\n",
+    "        cos_similarities = self._cos_similarity_from_optimizer_states(optimizer_states, avg_optim_state, trained_layer)\n",
+    "        print(f\"Cosine similarities used for aggregation are {cos_similarities}\")\n",
+    "\n",
     "\n",
     "        # Aggregate nn params using weighting from momentum\n",
     "        aggregated_weights = self._aggregate_params_weighted(weights_results, cos_similarities)\n",
-    "        trained_layer = results[0][1].metrics[\"trained_layer\"] \n",
     "\n",
     "        if trained_layer == -1:\n",
     "            self.latest_parameters = ndarrays_to_parameters(aggregated_weights)\n",
@@ -1238,11 +1239,15 @@
     "        ]\n",
     "        return weights_prime\n",
     "\n",
-    "    def _cos_similarity_from_optimizer_states(self, optimizer_states, prev_global_optimizer_state):\n",
+    "    def _cos_similarity_from_optimizer_states(self, optimizer_states, prev_global_optimizer_state, trained_layer=-1):\n",
     "        # Returns: cosine similarity from each optimizer state to the prev global state\n",
     "        cos = torch.nn.CosineSimilarity(dim=-1)\n",
     "        similarities = []\n",
-    "        layers = range(len(optimizer_states[0]['state']))\n",
+    "\n",
+    "        if trained_layer == -1:\n",
+    "            layers = range(len(optimizer_states[0]['state']))\n",
+    "        else:\n",
+    "            layers = [trained_layer * 2, trained_layer * 2 +1]\n",
     "\n",
     "        # get global opt params as vector\n",
     "        fst_momentum_glob = [prev_global_optimizer_state['state'][l]['exp_avg'].view(-1) for l in layers]\n",
@@ -1292,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1417,92 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mINFO \u001b[0m:      Starting Flower ServerApp, config: num_rounds=23, no round_timeout\n",
+      "\u001b[92mINFO \u001b[0m:      \n",
+      "\u001b[92mINFO \u001b[0m:      [INIT]\n",
+      "\u001b[92mINFO \u001b[0m:      Using initial global parameters provided by strategy\n",
+      "\u001b[92mINFO \u001b[0m:      Starting evaluation of initial global parameters\n",
+      "\u001b[92mINFO \u001b[0m:      initial parameters (loss, other metrics): 0.07207997663021087, {'accuracy': 0.1}\n",
+      "\u001b[92mINFO \u001b[0m:      \n",
+      "\u001b[92mINFO \u001b[0m:      [ROUND 1]\n",
+      "\u001b[92mINFO \u001b[0m:      configure_fit: strategy sampled 6 clients (out of 6)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on layer [-1, -1, -1, -1, -1, 0, 0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8, 8]\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m [Client 1] fit\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 0 and nameconv1.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 1 and nameconv1.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 2 and nameconv2.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 3 and nameconv2.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 4 and nameconv3.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 5 and nameconv3.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 6 and nameconv4.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 7 and nameconv4.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 8 and nameconv5.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 9 and nameconv5.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 10 and nameconv6.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 11 and nameconv6.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 12 and namefc1.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 13 and namefc1.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 14 and namefc2.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 15 and namefc2.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 16 and namefc3.weight is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 17 and namefc3.bias is trainabe\n",
+      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m training network...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:14,420 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 24578928640; capacity: 494384795648. Object creation will fail if spilling is required.\n",
+      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:24,446 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 23805480960; capacity: 494384795648. Object creation will fail if spilling is required.\n",
+      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:34,530 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 23795208192; capacity: 494384795648. Object creation will fail if spilling is required.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m Epoch 1: train loss 0.05516606941819191, accuracy 0.324096652626912\n",
+      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m [Client 3] fit\u001b[32m [repeated 5x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m layer index is 17 and namefc3.bias is trainabe\u001b[32m [repeated 90x across cluster]\u001b[0m\n",
+      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m training network...\u001b[32m [repeated 5x across cluster]\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:44,562 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 22717546496; capacity: 494384795648. Object creation will fail if spilling is required.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(ClientAppActor pid=43998)\u001b[0m Epoch 1: train loss 0.027569545432925224, accuracy 0.5908511542274465\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
+      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m Epoch 2: train loss 0.048964906483888626, accuracy 0.3772999334958989\u001b[32m [repeated 3x across cluster]\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:54,572 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 22716305408; capacity: 494384795648. Object creation will fail if spilling is required.\n",
+      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:59:04,584 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 23798812672; capacity: 494384795648. Object creation will fail if spilling is required.\n"
+     ]
+    }
+   ],
    "source": [
     "net = Net().to(DEVICE)\n",
     "\n",
@@ -1521,7 +1611,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fl_proj",
    "language": "python",
    "name": "python3"
   },
@@ -1535,7 +1625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
