--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_client_dropout.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_client_dropout.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on mps\n",
-      "Flower 1.15.2 / PyTorch 2.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
     "from typing import Dict, List, Optional, Tuple, Union, Callable\n",
@@ -180,7 +171,7 @@
     "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = net(images)\n",
-    "            loss = criterion(net(images), labels)\n",
+    "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            # Metrics\n",
@@ -272,12 +263,12 @@
     "\n",
     "NETWORK_LEN = len(Net().state_dict().keys()) // 2\n",
     "EPOCHS = 8\n",
-    "NUM_PARTITIONS = 3\n",
+    "NUM_PARTITIONS = 6\n",
     "NUM_OF_CYCLES  = 1\n",
     "NUM_OF_FULL_UPDATES_BETWEEN_CYCLES = 2\n",
     "NUM_OF_ROUNDS = (NUM_OF_CYCLES * NUM_OF_FULL_UPDATES_BETWEEN_CYCLES) + (NUM_OF_CYCLES * NETWORK_LEN *2)\n",
     "print(f\"Number of rounds: {NUM_OF_ROUNDS}\")\n",
-    "backend_config = {\"client_resources\": {\"num_cpus\": 1, \"num_gpus\": 0.0}}\n"
+    "backend_config = {\"client_resources\": {\"num_cpus\": 1, \"num_gpus\": 0.0}}"
    ]
   },
   {
@@ -288,34 +279,62 @@
    "source": [
     "from flwr.common import NDArrays, Scalar\n",
     "\n",
+    "# More robust evaluate function:\n",
     "def get_evaluate_fn(\n",
     "    testloader: DataLoader,\n",
     "    net: torch.nn.Module,\n",
     ") -> Callable[[int, NDArrays, Dict[str, Scalar]], Optional[Tuple[float, Dict[str, Scalar]]]]:\n",
     "    \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
-    "\n",
+    "    \n",
+    "    # used to check if they're changing\n",
+    "    previous_params = None\n",
+    "    \n",
     "    def evaluate(\n",
     "        server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
     "    ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
     "        \"\"\"Use the entire test set for evaluation.\"\"\"\n",
+    "        nonlocal previous_params\n",
     "        \n",
-    "        # Copy model parameters to avoid modifying the original\n",
+    "        print(f\"\\n==== Server-side evaluation for round {server_round} ====\")\n",
+    "        \n",
+    "        # Check if parameters changed from previous round\n",
+    "        if previous_params is not None:\n",
+    "            param_change = False\n",
+    "            for i, (prev, curr) in enumerate(zip(previous_params, parameters)):\n",
+    "                diff = np.abs(prev - curr).mean()\n",
+    "                if diff > 1e-6:\n",
+    "                    param_change = True\n",
+    "                    print(f\"  Parameter {i}: Changed by {diff:.6f}\")\n",
+    "            \n",
+    "            if not param_change:\n",
+    "                print(\"  WARNING: Parameters haven't changed from previous round!\")\n",
+    "        \n",
+    "        previous_params = [p.copy() for p in parameters]\n",
     "        net_copy = copy.deepcopy(net)\n",
-    "        \n",
+    "\n",
     "        # Update model with the latest parameters\n",
     "        params_dict = zip(net_copy.state_dict().keys(), parameters)\n",
-    "        state_dict = OrderedDict({k: torch.tensor(v) for k, v in params_dict})\n",
-    "        net_copy.load_state_dict(state_dict, strict=True)\n",
+    "        state_dict = OrderedDict({k: torch.tensor(v, device=DEVICE) for k, v in params_dict})\n",
     "        \n",
+    "        # Check if state dict keys match model keys\n",
+    "        model_keys = set(net_copy.state_dict().keys())\n",
+    "        params_keys = set(state_dict.keys())\n",
+    "        if model_keys != params_keys:\n",
+    "            print(f\"  WARNING: Key mismatch between model and parameters!\")\n",
+    "            print(f\"  Missing in params: {model_keys - params_keys}\")\n",
+    "            print(f\"  Extra in params: {params_keys - model_keys}\")\n",
+    "        \n",
+    "        net_copy.load_state_dict(state_dict, strict=True)\n",
     "        net_copy.to(DEVICE)\n",
     "        net_copy.eval()\n",
-    "\n",
+    "        \n",
     "        # Test the model\n",
     "        loss, accuracy = test(net_copy, testloader)\n",
+    "        print(f\"  Evaluation results - Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
     "        \n",
     "        # Return loss and metrics\n",
     "        return loss, {\"accuracy\": accuracy}\n",
-    "\n",
+    "    \n",
     "    return evaluate"
    ]
   },
@@ -1551,11 +1570,25 @@
     "# plt.legend()\n",
     "# plt.title('Loss for Each Round')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fl_proj",
    "language": "python",
    "name": "python3"
   },
@@ -1569,7 +1602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
