--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on mps\n",
-      "Flower 1.15.1 / PyTorch 2.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
     "from typing import Dict, List, Optional, Tuple, Union, Callable\n",
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,65 +258,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rounds: 23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "NETWORK_LEN = len(Net().state_dict().keys()) // 2\n",
     "EPOCHS = 8\n",
     "NUM_PARTITIONS = 6\n",
     "NUM_OF_CYCLES  = 1\n",
-    "NUM_OF_FULL_UPDATES_BETWEEN_CYCLES = 5\n",
+    "NUM_OF_FULL_UPDATES_BETWEEN_CYCLES = 2\n",
     "NUM_OF_ROUNDS = (NUM_OF_CYCLES * NUM_OF_FULL_UPDATES_BETWEEN_CYCLES) + (NUM_OF_CYCLES * NETWORK_LEN *2)\n",
     "print(f\"Number of rounds: {NUM_OF_ROUNDS}\")\n",
-    "backend_config = {\"client_resources\": {\"num_cpus\": 1, \"num_gpus\": 0.0}}\n"
+    "backend_config = {\"client_resources\": {\"num_cpus\": 1, \"num_gpus\": 0.0}}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flwr.common import NDArrays, Scalar\n",
     "\n",
+    "# More robust evaluate function:\n",
     "def get_evaluate_fn(\n",
     "    testloader: DataLoader,\n",
     "    net: torch.nn.Module,\n",
     ") -> Callable[[int, NDArrays, Dict[str, Scalar]], Optional[Tuple[float, Dict[str, Scalar]]]]:\n",
     "    \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
-    "\n",
+    "    \n",
+    "    # used to check if they're changing\n",
+    "    previous_params = None\n",
+    "    \n",
     "    def evaluate(\n",
     "        server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
     "    ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
     "        \"\"\"Use the entire test set for evaluation.\"\"\"\n",
+    "        nonlocal previous_params\n",
     "        \n",
-    "        # Copy model parameters to avoid modifying the original\n",
+    "        print(f\"\\n==== Server-side evaluation for round {server_round} ====\")\n",
+    "        \n",
+    "        # Check if parameters changed from previous round\n",
+    "        if previous_params is not None:\n",
+    "            param_change = False\n",
+    "            for i, (prev, curr) in enumerate(zip(previous_params, parameters)):\n",
+    "                diff = np.abs(prev - curr).mean()\n",
+    "                if diff > 1e-6:\n",
+    "                    param_change = True\n",
+    "                    print(f\"  Parameter {i}: Changed by {diff:.6f}\")\n",
+    "            \n",
+    "            if not param_change:\n",
+    "                print(\"  WARNING: Parameters haven't changed from previous round!\")\n",
+    "        \n",
+    "        previous_params = [p.copy() for p in parameters]\n",
     "        net_copy = copy.deepcopy(net)\n",
-    "        \n",
+    "\n",
     "        # Update model with the latest parameters\n",
     "        params_dict = zip(net_copy.state_dict().keys(), parameters)\n",
-    "        state_dict = OrderedDict({k: torch.tensor(v) for k, v in params_dict})\n",
-    "        net_copy.load_state_dict(state_dict, strict=True)\n",
+    "        state_dict = OrderedDict({k: torch.tensor(v, device=DEVICE) for k, v in params_dict})\n",
     "        \n",
+    "        # Check if state dict keys match model keys\n",
+    "        model_keys = set(net_copy.state_dict().keys())\n",
+    "        params_keys = set(state_dict.keys())\n",
+    "        if model_keys != params_keys:\n",
+    "            print(f\"  WARNING: Key mismatch between model and parameters!\")\n",
+    "            print(f\"  Missing in params: {model_keys - params_keys}\")\n",
+    "            print(f\"  Extra in params: {params_keys - model_keys}\")\n",
+    "        \n",
+    "        net_copy.load_state_dict(state_dict, strict=True)\n",
     "        net_copy.to(DEVICE)\n",
     "        net_copy.eval()\n",
-    "\n",
+    "        \n",
     "        # Test the model\n",
     "        loss, accuracy = test(net_copy, testloader)\n",
+    "        print(f\"  Evaluation results - Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
     "        \n",
     "        # Return loss and metrics\n",
     "        return loss, {\"accuracy\": accuracy}\n",
-    "\n",
+    "    \n",
     "    return evaluate"
    ]
   },
@@ -338,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,6 +1260,8 @@
     "        else:\n",
     "            layers = [trained_layer * 2, trained_layer * 2 +1]\n",
     "\n",
+    "        print(f\"Computing cos similarity for trained layers {layers}\")\n",
+    "\n",
     "        # get global opt params as vector\n",
     "        fst_momentum_glob = [prev_global_optimizer_state['state'][l]['exp_avg'].view(-1) for l in layers]\n",
     "        snd_momentum_glob = [prev_global_optimizer_state['state'][l]['exp_avg_sq'].view(-1) for l in layers]\n",
@@ -1297,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,92 +1430,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[92mINFO \u001b[0m:      Starting Flower ServerApp, config: num_rounds=23, no round_timeout\n",
-      "\u001b[92mINFO \u001b[0m:      \n",
-      "\u001b[92mINFO \u001b[0m:      [INIT]\n",
-      "\u001b[92mINFO \u001b[0m:      Using initial global parameters provided by strategy\n",
-      "\u001b[92mINFO \u001b[0m:      Starting evaluation of initial global parameters\n",
-      "\u001b[92mINFO \u001b[0m:      initial parameters (loss, other metrics): 0.07207997663021087, {'accuracy': 0.1}\n",
-      "\u001b[92mINFO \u001b[0m:      \n",
-      "\u001b[92mINFO \u001b[0m:      [ROUND 1]\n",
-      "\u001b[92mINFO \u001b[0m:      configure_fit: strategy sampled 6 clients (out of 6)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on layer [-1, -1, -1, -1, -1, 0, 0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8, 8]\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m [Client 1] fit\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 0 and nameconv1.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 1 and nameconv1.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 2 and nameconv2.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 3 and nameconv2.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 4 and nameconv3.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 5 and nameconv3.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 6 and nameconv4.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 7 and nameconv4.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 8 and nameconv5.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 9 and nameconv5.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 10 and nameconv6.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 11 and nameconv6.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 12 and namefc1.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 13 and namefc1.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 14 and namefc2.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 15 and namefc2.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 16 and namefc3.weight is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m layer index is 17 and namefc3.bias is trainabe\n",
-      "\u001b[36m(ClientAppActor pid=43999)\u001b[0m training network...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:14,420 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 24578928640; capacity: 494384795648. Object creation will fail if spilling is required.\n",
-      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:24,446 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 23805480960; capacity: 494384795648. Object creation will fail if spilling is required.\n",
-      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:34,530 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 23795208192; capacity: 494384795648. Object creation will fail if spilling is required.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m Epoch 1: train loss 0.05516606941819191, accuracy 0.324096652626912\n",
-      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m [Client 3] fit\u001b[32m [repeated 5x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
-      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m layer index is 17 and namefc3.bias is trainabe\u001b[32m [repeated 90x across cluster]\u001b[0m\n",
-      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m training network...\u001b[32m [repeated 5x across cluster]\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:44,562 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 22717546496; capacity: 494384795648. Object creation will fail if spilling is required.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(ClientAppActor pid=43998)\u001b[0m Epoch 1: train loss 0.027569545432925224, accuracy 0.5908511542274465\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
-      "\u001b[36m(ClientAppActor pid=43997)\u001b[0m Epoch 2: train loss 0.048964906483888626, accuracy 0.3772999334958989\u001b[32m [repeated 3x across cluster]\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:58:54,572 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 22716305408; capacity: 494384795648. Object creation will fail if spilling is required.\n",
-      "\u001b[33m(raylet)\u001b[0m [2025-03-19 18:59:04,584 E 43981 1308815] (raylet) file_system_monitor.cc:111: /tmp/ray/session_2025-03-19_18-57-54_559833_43953 is over 95% full, available space: 23798812672; capacity: 494384795648. Object creation will fail if spilling is required.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "net = Net().to(DEVICE)\n",
     "\n",
@@ -1542,6 +1470,37 @@
     "\n",
     "with open(f'results/fed_part_avg_momentum_weighting_model_data_heterogenity_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_momentum_weighting_model_results, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEMP: first version data het\n",
+    "\"\"\"\n",
+    "INFO :      \t{'accuracy': [(0, 0.1),\n",
+    "INFO :      \t              (1, 0.1),\n",
+    "INFO :      \t              (2, 0.1529),\n",
+    "INFO :      \t              (3, 0.2679),\n",
+    "INFO :      \t              (4, 0.1651),\n",
+    "INFO :      \t              (5, 0.1691),\n",
+    "INFO :      \t              (6, 0.1699),\n",
+    "INFO :      \t              (7, 0.1682),\n",
+    "INFO :      \t              (8, 0.1695),\n",
+    "INFO :      \t              (9, 0.1662),\n",
+    "INFO :      \t              (10, 0.1389),\n",
+    "INFO :      \t              (11, 0.1749),\n",
+    "INFO :      \t              (12, 0.1669),\n",
+    "INFO :      \t              (13, 0.2005),\n",
+    "INFO :      \t              (14, 0.1549),\n",
+    "INFO :      \t              (15, 0.2045),\n",
+    "INFO :      \t              (16, 0.1667),\n",
+    "INFO :      \t              (17, 0.2186),\n",
+    "INFO :      \t              (18, 0.1952),\n",
+    "INFO :      \t              (19, 0.2439),\n",
+    "INFO :      \t              (20, 0.2484),\n",
+    "INFO :      \t              (21, 0.269)] \n",
+    "\"\"\""
    ]
   },
   {
